--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -25,3 +25,84 @@
 .navbar-text {
   margin-left: 15px;
 }
+
+.panel-title a {
+  height: 33px;
+  display: inline-block;
+  line-height: 30px;
+}
+
+.frm-rating {
+  cursor: pointer;
+  width: 110px;  
+}
+
+.frm-rating__title {
+  margin-left: 10px;
+  position: relative;
+  top: 1px;
+}
+
+.form-group > div {
+  padding-left: 0px;
+}
+
+.archives-actions .btn {
+  margin-left: 5px;
+}
+
+.list-ingredients .list-group-item {
+  height: 50px;
+  line-height: 24px;
+}
+
+.list-ingredients .btn-success {
+    margin-left: 5px;
+}
+
+.list-ingredients .input-quantity {
+    text-align: center;
+    margin-left: 20px;
+}
+
+#frm-ajout-plat .row {
+    margin-bottom: 15px;
+}
+
+input[type="date"] {text-align: center;}
+input[type="date"]::-webkit-inner-spin-button { display: none; }
+
+.static-popover-bottom { 
+  display: block !important; 
+  position: fixed;
+  bottom: 10px;
+  left: initial !important;
+  right: 20px !important;
+  height: auto !important;
+  top: initial !important;
+}
+
+#shoplist {
+  width: 400px;
+  max-width: 400px;
+}
+
+#shoplist .popover-content {
+  overflow-y: scroll;
+  max-height: 500px; 
+}
+
+#shoplist .popover-title {
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.searchbox {
+  margin-bottom: 15px;
+  padding-left: 0px;
+}
+
+.shoplists-box {
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
