--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <p>Angular Fullstack v3.3.0-beta.0 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
+  <p>Food-Helper |
+    <a href="https://github.com/passpartout007/foodhelper">@passpartout007</a> |
+    <a href="https://www.doyoubuzz.com/pierre-lesecq">Pierre Lesecq</a>
   </p>
 </div>
