--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,20 +1,6 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
+<header class="hero-unit" id="banner">
   <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">food-helper</a>
-    </div>
-    <div collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li ng-repeat="item in nav.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
-        </li>
-      </ul>
-    </div>
+    <h1>Food Helper&nbsp;&nbsp;<span class='glyphicon glyphicon-cutlery'></span></h1>
+    <p class="lead">Mémorisez vos recettes, sélectionnez vos plats et générez votre liste de courses !</p>    
   </div>
-</div>
+</header>
