Stabilisation de l'application

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -19,7 +19,7 @@
   color: #F5F5F5;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  background: #428bca;
 }
 
 .navbar-text {
@@ -93,7 +93,6 @@ input[type="date"]::-webkit-inner-spin-button { display: none; }
 }
 
 #shoplist .popover-title {
-  cursor: pointer;
   font-size: 16px;
 }
 
@@ -105,4 +104,25 @@ input[type="date"]::-webkit-inner-spin-button { display: none; }
 .shoplists-box {
   margin-bottom: 30px;
   margin-top: 15px;
+}
+
+.input-shoplist-name {
+  width: 88%;
+  display: inline-block;
+  font-size: 18px;
+}
+
+.btn-close-shoplist {
+  position: relative;
+  bottom: 25px;
+  left: 28px;
+  float: right;
+  padding: 0px;
+  line-height: 10px;
+  height: 40px;
+  width: 40px;
+}
+
+.ingredients-list {
+  cursor: pointer;
 }
